# SFMLPaddleball

./: .gitignore  CMakeLists.txt  config.h.in
cmake_modules/: FindSFML.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/SFMLPaddleball/: ball.hpp  game.hpp  paddle.hpp
src/: ball.cpp  game.cpp  main.cpp  paddle.cpp
